--- a/Jashwanth/day1/index.html
+++ b/Jashwanth/day1/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
  
-  <h2>Personalized Greeting</h2>
+  <h2>Personalized Greetings</h2>
   <button onclick="greetUser()">Greet Me</button>
   <p id="greeting"></p>
  
