removed for=name

--- a/yaswanth/day1/index.html
+++ b/yaswanth/day1/index.html
@@ -6,7 +6,7 @@
   <body>
     <h2>Even or Odd Number</h2>
 
-    <p for="num">Enter any number:</p>
+    <p>Enter any number:</p>
     <input type="number" id="num" />
     <button onclick="addoreven()">Check Number</button>
 
