--- a/Triveni/Day1/index.html
+++ b/Triveni/Day1/index.html
@@ -1,28 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Greeting App</title>
+  <title>Learning</title>
 </head>
 <body>
-
-  <h2>Personalized Greeting</h2>
-  <button onclick="greetUser()">Greet Me</button>
-  <p id="greeting"></p>
-
-
-
+  <h2>Showing the even or odd</h2>
+  <button onclick="num()">click here</button>
+  <p id="learning"> </p>
   <script>
-    function greetUser() {
-      debugger;
-      let name = prompt("What is your name?");
-      if (name) {
-        document.getElementById("greeting").innerText = "Hello, " + name + "!!!";
-      } else {
-        document.getElementById("greeting").innerText = "Hello, Stranger!";
+     function num(){
+      let number = prompt("Enter a value:");
+      if (number%2==0){
+        document.getElementById("learning").innerText = number + " is EVEN";
       }
-    }
+      else{
+        document.getElementById("learning").innerText = number + " is ODD";
+      }
+     }
   </script>
-
 </body>
 </html>
-
