--- a/Triveni/Day1/index.html
+++ b/Triveni/Day1/index.html
@@ -10,7 +10,7 @@
   <script>
      function num(){
       let number = prompt("Enter a value:");
-      if (number%2==0){
+      if (number%2===0){
         document.getElementById("learning").innerText = number + " is EVEN";
       }
       else{
