--- a/Jashwanth/day3/index.html
+++ b/Jashwanth/day3/index.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head></head>    
+<head>
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width,initial-scale=1.0">
+ <title>Profile Card</title>  
+</head>
+<body>
+    <h4>profile pic</h4>
+    
+</body>    
 </html>
