--- a/Jashwanth/day3/index.html
+++ b/Jashwanth/day3/index.html
@@ -3,10 +3,24 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width,initial-scale=1.0">
- <title>Profile Card</title>  
+ <title>Profile Card</title>
+ <style>
+    .img{
+        height: 100px;
+        width: 100px;
+        border-radius: 50px;
+        text-align: center;
+        object-fit: cover;
+        padding: auto;
+         }
+         body{
+            justify-content: center;
+            align-items: center;
+         }
+ </style>  
 </head>
 <body>
     <h4>profile pic</h4>
-    
+    <img src="nani pic3.JPG" class="img"/>
 </body>    
 </html>
