--- a/Jashwanth/day3/index.html
+++ b/Jashwanth/day3/index.html
@@ -20,7 +20,9 @@
  </style>  
 </head>
 <body>
-    <h4>profile pic</h4>
     <img src="nani pic3.JPG" class="img"/>
+    <h3>Jashwanth Kummari</h3>
+    <h4>Frontend Developer</h4>
+    <button onclick="follow()">Follow</button>
 </body>    
 </html>
