modified the code

--- a/Yashwanth/day2/index.html
+++ b/Yashwanth/day2/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Check ur mood Type</h1>
-    <p id="result"></p>
+    <h1>Check Ur Mood</h1>
+    <p id="result">Click the Button</p>
     <button id="happybtn">Happy</button>
     <button id="sadbtn">Sad</button>
     <button id="angrybtn">Angry</button>
