--- a/Yashwanth/day2/index.html
+++ b/Yashwanth/day2/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Type of mood</title>
+    <title>Check Your Mood</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Check Ur Mood</h1>
-    <p id="result">Click the Button</p>
+    <h1>Check Your Mood</h1>
+    <p id="result"></p>
     <button id="happybtn">Happy</button>
-    <button id="sadbtn">Sad</button>
     <button id="angrybtn">Angry</button>
+    <button id="sadbtn">Sad</button>
     <button id="anythingelsebtn">Anything Else</button>
     <button id="resetbtn">Reset</button>
     <script src="script.js"></script>
