--- a/Yashwanth/day 2/index.html
+++ b/Yashwanth/day 2/index.html
@@ -14,7 +14,7 @@
         if (mood === "happy") {
           document.getElementById("result").innerText = "😊";
         } else if (mood === "sad") {
-          document.getElementById("result").innerText = "😢gu";
+          document.getElementById("result").innerText = "😢";
         } else if (mood === "angry") {
           document.getElementById("result").innerText = "😡";
         } else {
