completed profile card

--- a/Jashwanth/day1/index.html
+++ b/Jashwanth/day1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>cheaking even or odd number</title>
+    <title>Checking even or odd number</title>
   </head>
   <body>
     <h2>even number</h2>
